--- a/styles/base.css
+++ b/styles/base.css
@@ -20,7 +20,7 @@ header img {
     display: inline-block;
     height: 100px;
     padding: 30px;
-    margin-left: auto;
+    margin-left: 50px;
     margin-right: auto;
     vertical-align: middle;
 
@@ -77,6 +77,7 @@ h3 {
     background-color: lightblue;
     margin: 0;
     text-align: center;
+    font-family: 'Courgette', Arial, sans-serif;
 }
 
 ul {
