--- a/styles/base.css
+++ b/styles/base.css
@@ -78,6 +78,7 @@ h3 {
     margin: 0;
     text-align: center;
     font-family: 'Courgette', Arial, sans-serif;
+    padding: 10px;
 }
 
 ul {
@@ -92,6 +93,7 @@ ul {
   }
 
 p {
+
     text-align: center;
 }
 
@@ -99,5 +101,5 @@ footer {
     grid-column: 1/3;
     background-color: lightblue;
     width: 52%;
-    margin: 20px;
+    margin-top: 20px;
 }
