--- a/styles/base.css
+++ b/styles/base.css
@@ -3,7 +3,7 @@
 
 body {
     display: grid;
-    grid-template-columns: 1fr 9fr 1fr;
+    grid-template-columns: 0.5fr 2fr 2fr 2fr 0.5fr;
     justify-items: center;
     align-content: center;
     font-family: 'poppins', arial, sans-serif;
@@ -11,16 +11,16 @@ body {
   }
 
 header {
-    grid-column: 1/3;
+    grid-column: 1/5;
     background-color: lightblue;
-    width: 50%;
+    width: 75%;
 }
 
 header img {
     display: inline-block;
     height: 100px;
     padding: 30px;
-    margin-left: 50px;
+    margin-left: 25%;
     margin-right: auto;
     vertical-align: middle;
 
@@ -36,10 +36,10 @@ h1 {
 }
 
 nav {
-    width: 50%;
+    width: 75%;
     display: block;
     justify-content: space-around;
-    grid-column: 1/3;
+    grid-column: 1/5;
     background-color: black;
 }
 
@@ -58,8 +58,8 @@ nav a:hover {
   }
 
 main {
-    grid-column: 1/3;
-    width: 50%;
+    grid-column: 1/5;
+    width: 75%;
 }
 
 h2 {
@@ -98,8 +98,8 @@ p {
 }
 
 footer {
-    grid-column: 1/3;
+    grid-column: 1/5;
     background-color: lightblue;
-    width: 52%;
+    width: 77%;
     margin-top: 20px;
 }
