--- a/styles/base.css
+++ b/styles/base.css
@@ -7,43 +7,67 @@ body {
 
 header {
     background-color: lightblue;
+    display: flex;
+    justify-content: center;
     align-items: center;
+    padding-top: 1%;
+      
 }
 
 header img {
-    display: inline-block;
-    height: 100px;
     padding: 30px;
-    margin-left: 32%;
-    margin-right: auto;
-    vertical-align: middle;
 }
 
 h1 {
-    display: inline-block;
-    text-align: center;
-    padding: 20px;
-    vertical-align: middle;
     font-family: 'Courgette', Arial, sans-serif;
+}
 
+#menu {
+	font-size: 1.5rem;
+	border: 0;
+	background: none;
+	color: #000;
+ 	position: absolute;
+	top: 20px;
+	right: 20px;
+}
+
+#menu::before {
+	content: "☰";
+}
+
+#menu.open::before {
+	content: "🅇";
 }
 
 nav {
-	background-color: #36454f;
-	margin: 0 auto;
+	list-style: none;
+	background-color: #333;
+	color: #fff;
 }
 
 nav a {
-	display: block;
-	color: #fff;
-	text-align: center;
+	display: none;
 	padding: 1rem;
+	text-align: center;
 	text-decoration: none;
+	color: #fff;
+}
+nav a:hover {
+	background-color: #bbb;
+	color: #333;
+	font-weight: 700;
 }
 
-nav a:hover {
-	text-decoration:overline;
+.open a {
+	display: block;
 }
+
+.active::first-line {
+	color: lightsalmon;
+}
+
+
 
 h2 {
     border-bottom: 1px solid #000;
@@ -65,6 +89,10 @@ h3 {
     padding: 10px;
 }
 
+h3::first-letter{
+    font-size: 1.5rem;
+}
+
 ul {
     counter-reset: item;
   }
@@ -78,6 +106,10 @@ ul {
 
 p {
     text-align: center;
+}
+
+iframe {
+    max-width: 100%;
 }
 
 footer {
