--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,19 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Poppins:wght@200&display=swap');
 
-@media (min-width: 1150px){
+@media (min-width: 1000px){
 
     nav {
-        list-style-type: none;
         display: flex;
     }
     
     nav a {
+        display: block;
         flex: 1 1 100%;
+    }
+    
+    nav a:hover {
+        text-decoration:overline;
     }
 
     .card {
         display: inline-block;
         width: 47%;
         margin-left: 1.4%;
+    }
+
+    #menu {
+        display: none;
+    }
+
+    .card:nth-last-of-type(1) {
+        width: 90%;
+        margin: 10px auto;
+        display: block;
+
     }
 }
