fixed all the fonts

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -53,6 +53,15 @@ nav a:hover {
 
 }
 
+h3 {
+	font-family: 'Courgette', arial, sans-serif;
+}
+
+p {
+	font-family: 'Poppins', arial, sans-serif;
+
+}
+
 
 
 
