--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Poppins:wght@200&display=swap');
 
+body {
+	width: 100%;
+}
 header {
 	font-family: 'Courgette', arial, sans-serif;
 	background-color: #34485D;
@@ -46,9 +49,17 @@ nav a:hover {
 	font-weight: 700;
 }
 
-.card, .events {
+.open a {
+	display: block;
+}
+
+.hero {
+	width: 100%;
+}
+
+.item {
     border: 1px solid #000;
-    display: inline-block;
+    display: block;
 	text-align: center;
 
 }
