--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -12,6 +12,70 @@ header {
     padding-top: 1%;
 }
 
+/* The switch - the box around the slider */
+.switch {
+	position: absolute;
+	top: 4rem;
+	right: 2rem;
+	width: 60px;
+	height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+	opacity: 0;
+	width: 0;
+	height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #ccc;
+	-webkit-transition: .4s;
+	transition: .4s;
+  }
+  
+  .slider:before {
+	position: absolute;
+	content: "";
+	height: 26px;
+	width: 26px;
+	left: 4px;
+	bottom: 4px;
+	background-color: white;
+	-webkit-transition: .4s;
+	transition: .4s;
+  }
+  
+  input:checked + .slider {
+	background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+	box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+	-webkit-transform: translateX(26px);
+	-ms-transform: translateX(26px);
+	transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+	border-radius: 34px;
+  }
+  
+  .slider.round:before {
+	border-radius: 50%;
+  }
+
 #menu {
 	font-size: 1.5rem;
 	border: 0;
@@ -32,7 +96,7 @@ header {
 
 nav {
 	list-style: none;
-	background-color: #6EE4FE;
+	background-color: #34485D;
 }
 
 nav a {
@@ -40,7 +104,7 @@ nav a {
 	padding: 1rem;
 	text-align: center;
 	text-decoration: none;
-	color: #000;
+	color: white;
 }
 
 nav a:hover {
@@ -55,6 +119,45 @@ nav a:hover {
 
 .hero {
 	width: 100%;
+	display: block;
+	margin-bottom: 1rem;
+}
+
+.hero_container {
+	position: relative;
+}
+
+.action {
+	position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+    color: white;
+    text-align: center;
+	max-width: 50%;
+
+}
+
+.action h2 {
+	display: inline-block;
+	padding: 0.5rem;
+	background-color: rgba(0, 0, 0, 0.5);
+	border-radius: 10px;
+}
+
+.action h2:hover {
+	background-color: #6EE4FE;
+	color: black;
+
+}
+
+
+.action p {
+	display: none;
+	padding: 0.5rem;
+	background-color: rgba(0, 0, 0, 0.5);
+	border-radius: 10px;
+
 }
 
 .item {
@@ -73,10 +176,20 @@ p {
 
 }
 
-
-
-
 footer {
-    background-color: #6EE4FE;
+    background-color: #34485D;
+	color: white;
     margin-top: 20px;
+	margin-bottom: 0px;
+	text-align: center;
+}
+
+.dark-mode {
+	background-color: #000;
+	color: #fff;
+	border-color: #eee; 
+}
+
+.dark-mode .item {
+	border: 1px solid white;
 }
