--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -19,7 +19,7 @@
         display: none;
     }
 
-    footer {
+    .bottom {
         display: inline-flex;
         justify-content: space-around;
         width: 100%;
