--- a/styles/larger.css
+++ b/styles/larger.css
@@ -31,4 +31,10 @@
         display: block;
 
     }
+
+    footer {
+        display: inline-flex;
+        justify-content: space-around;
+        width: 100%;
+    }
 }
