--- a/styles/larger.css
+++ b/styles/larger.css
@@ -16,6 +16,7 @@
     }
 
     .card {
+        border: 1px solid #000;
         display: inline-block;
         width: 47%;
         margin-left: 1.4%;
