--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -85,6 +85,15 @@
         display: block;
       }
 
-    
+      .discover_container {
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+        gap: 20px;
+        padding: 20px;
+      }
+   
+      .discover_main_content figure:hover {
+        box-shadow: 0 16px 32px rgba(0, 0, 0, 0.9);
+      }
 }
 
