--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -30,6 +30,11 @@ header img {
 	width: 0;
 	height: 0;
   }
+
+  .active {
+	text-decoration: underline;
+	color: #6EE4FE;
+  }
   
   /* The slider */
   .slider {
@@ -120,8 +125,9 @@ nav a:hover {
 	display: block;
 }
 
-.hero img{
+.hero {
 	width: 100%;
+	max-width: 100%;
 	display: block;
 	margin-bottom: 1rem;
 }
@@ -247,3 +253,75 @@ footer {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
 }
+
+.form1 fieldset {
+    margin: 2rem 0;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    padding: .5rem 2%;
+}
+
+.form1 legend {
+    color: #445ba9;
+    padding: 0 .5rem;
+}
+
+.form1 label {
+    display: block;
+    padding-top: 1rem;
+    color: #9c2c13;
+    font-size: .9rem;
+}
+
+
+.form1 input[type="text"], 
+.form1 input[type="tel"], 
+.form1 input[type="email"], 
+.form1 input[type="password"], 
+.form1 input[type="rating"] {
+    display: block;
+    border: solid 1px gray;
+    border-radius: 6px;
+    padding: .75rem;
+    color: gray;
+    width: 100%;
+    max-width: 400px;
+    background-color: #eee;
+    appearance: none;
+}
+
+.form1 input[type="submit"] {
+    border: none;
+    background-image: linear-gradient(#557b9d, #34485D);
+    color: #fff;
+    border-radius: 6px;
+    padding: .8rem;
+    width: 96%;
+    max-width: 400px;
+    margin: -1rem 2% 2rem 2%; 
+    box-shadow: 1px 1px 4px #999;
+}
+
+.form1 input:required {
+    border-left: solid 8px red;
+}
+
+
+.form1 input:required:valid {
+    border-left: solid 8px green;
+}
+
+.formContainer {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-gap: 20px;
+	margin: 1rem;
+}
+
+.membershipInfo {
+	border: 1px solid lightgray;
+	border-radius: 10px;
+	padding: 1rem;
+	margin-top: 40px;
+}
+
