--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -279,7 +279,7 @@ footer {
 .form1 input[type="email"], 
 .form1 input[type="password"], 
 .form1 input[type="rating"],
-.form1 input[type="textarea"] {
+.form1 textarea {
     display: block;
     border: solid 1px gray;
     border-radius: 6px;
