--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -88,10 +88,17 @@
       .discover_container {
         display: grid;
         grid-template-columns: 1fr 3fr;
-        gap: 20px;
+        gap: 3rem;
         padding: 20px;
       }
-   
+
+      .discover_main_content {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+      }
+
       .discover_main_content figure:hover {
         box-shadow: 0 16px 32px rgba(0, 0, 0, 0.9);
       }
