--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -332,7 +332,11 @@ footer {
 }
 
 
-
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
 
 .directory_container main {
 	margin: 0 auto;
@@ -361,10 +365,8 @@ footer {
 }
 
 .grid {
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-	grid-gap: 5px;
-	align-items: center;
+    display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));    grid-gap: 10px;
 }
 
 .grid section {
