--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Poppins:wght@200&display=swap');
 
 @media (min-width: 1500px){
-    
+    /* .grid {
+        grid-template-columns: 1fr 1fr 1fr;
+    } */
 }
+
