--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -106,6 +106,10 @@
       .formContainer{
         grid-template-columns: 1fr 1fr;
       }
+
+      /* .grid {
+        grid-template-columns: repeat(2, 1fr);
+      } */
       
 }
 
