--- a/styles/base.css
+++ b/styles/base.css
@@ -153,3 +153,15 @@ footer {
     background-color: lightblue;
     margin-top: 20px;
 }
+
+section.card figure {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto; 
+}
+
+section.card figure img {
+    display: block; 
+    margin: 0 auto;
+}
