added business shoutout and fixed some css

--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Poppins:wght@200&display=swap');
 
-@media (min-width: 1000px){
+@media (min-width: 800px){
 
     nav {
         display: flex;
@@ -105,6 +105,10 @@
 
       .formContainer{
         grid-template-columns: 1fr 1fr;
+      }
+
+      .grid {
+        max-width: 500px;
       }
 
   
