--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -142,34 +142,27 @@ nav a:hover {
     color: white;
     text-align: center;
 	max-width: 50%;
-
 }
 
-.action h2 {
+.action a {
 	display: inline-block;
 	padding: 0.5rem;
-	background-color: rgba(0, 0, 0, 0.5);
+	color: white;
 	border-radius: 10px;
+	background-color: rgba(0, 0, 0, 0.5);
+
 }
 
-.action h2:hover {
+.action a:hover {
 	background-color: #6EE4FE;
 	color: black;
-
-}
-
-
-.action p {
-	display: none;
-	padding: 0.5rem;
-	background-color: rgba(0, 0, 0, 0.5);
-	border-radius: 10px;
 
 }
 
 .item {
     border: 1px solid #000;
     display: flex;
+	background-color: lightgray;
     flex-direction: column;
     align-items: center;
     text-align: center;
@@ -203,6 +196,10 @@ footer {
 	background-color: #000;
 	color: #fff;
 	border-color: #eee; 
+}
+
+.dark-mode .item, .dark-mode .forecast-day {
+	background-color: rgb(70, 70, 70);
 }
 
 .dark-mode .item, .dark-mode .sidebar_item {
@@ -360,7 +357,9 @@ footer {
 .grid {
     display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));    
-	grid-gap: 10px;
+	grid-gap: 2rem;
+	max-width: 250px;
+	margin: auto;
 }
 
 .grid section, .directory_container h1 {
