--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -198,7 +198,7 @@ footer {
 	border-color: #eee; 
 }
 
-.dark-mode .item, .dark-mode .forecast-day {
+.dark-mode .item, .dark-mode .forecast-day, .dark-mode .membershipInfo {
 	background-color: rgb(70, 70, 70);
 }
 
@@ -251,6 +251,8 @@ footer {
 	font-size: 1.5rem;
 	border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	background-color: lightgray;
+
 
 }
 
@@ -289,6 +291,7 @@ footer {
     max-width: 400px;
     background-color: #eee;
     appearance: none;
+	
 }
 
 .form1 input[type="submit"] {
@@ -317,6 +320,7 @@ footer {
 	grid-template-columns: 1fr;
 	grid-gap: 20px;
 	margin: 1rem;
+	
 }
 
 .membershipInfo {
@@ -324,6 +328,8 @@ footer {
 	border-radius: 10px;
 	padding: 1rem;
 	margin-top: 40px;
+	background-color: lightgray;
+
 }
 
 
