--- a/finalProject/styles/larger.css
+++ b/finalProject/styles/larger.css
@@ -54,4 +54,17 @@
         font-size: 1.2rem;
     }
 
+    .card {
+        border: 1px solid #000;
+        display: inline-block;
+        vertical-align: top;
+        width: 47%;
+        margin-left: 1.4%;
+    }
+
+    .card {
+        background-color: #d5d5d5;
+
+    }
+
 }
