--- a/finalProject/styles/larger.css
+++ b/finalProject/styles/larger.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 @media (min-width: 850px){
 
     nav {
@@ -40,7 +41,7 @@
         padding: 10px 0; 
         flex-direction: row;
     }
-    
+
     .photos img {
         width: calc(50% - 5px); 
         height: auto; 
